[project]
name = "comfyui-fast-style-transfer"
description = "ComfyUI node for fast neural style transfer. This is a simple conversion based on this: [a/https://github.com/rrmina/fast-neural-style-pytorch](https://github.com/rrmina/fast-neural-style-pytorch)"
version = "1.0.2"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/zeroxoxo/ComfyUI-Fast-Style-Transfer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zeroxoxo"
DisplayName = "ComfyUI-Fast-Style-Transfer"
Icon = ""
